fix codestyle